data/derived/comb/progs/unify/prog4158.ml.out
Characters 31-39:
  let stringOfList f l = f (pipe List.map l);;
                                 ^^^^^^^^
Error: This expression has type ('a -> 'b) -> 'a list -> 'b list
       but an expression was expected of type ('c -> 'c) list
